# immortal-stack

./: .gitignore  CMakeLists.txt  README.md  README_TESTER.txt  doxygen_log.txt  main.c  stack_logs.txt
docs/html/: _c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _r_e_a_d_m_e_8md_source.html  all__possible__stack_8h.html  all__possible__stack_8h__dep__incl.dot  all__possible__stack_8h__dep__incl.md5  all__possible__stack_8h__incl.dot  all__possible__stack_8h__incl.md5  all__possible__stack_8h_source.html  cmake-build-debug_2_c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  dir_000010_000009.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.dot  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68372674d70ec485d553e74681ff3bdc.html  dir_8d147aabc96ba7af6957ebbadd526ad1.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_daf8d3a737cdddea5af165ba6da62439.html  dir_ea05a26664c01ae5cdc858f971e0d772.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f942a7a73394fda25d4213a70555b3f8.html  files.html  globals.html  globals_defs.html  globals_enum.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  menudata.js  (+25 more)
src/: all_possible_stack.c  all_possible_stack.h  help_stack.c  help_stack.h  stack.c  stack.h  stack_errors.c  stack_errors.h  templates.h
tests/: tests.c
(+9 files in other folders)
